--- a/package.json
+++ b/package.json
@@ -2,5 +2,35 @@
   "devDependencies": {
     "git-commit-msg-linter": "^3.2.8",
     "typescript": "^4.5.4"
-  }
+  },
+  "name": "passport",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "ansi-styles": "^3.2.1",
+    "chalk": "^2.4.2",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "did-you-mean": "^0.0.1",
+    "escape-string-regexp": "^1.0.5",
+    "has-flag": "^4.0.0",
+    "levenshtein": "^1.0.5",
+    "supports-color": "^8.1.1",
+    "underscore": "^1.13.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Web-101/node-passport.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Web-101/node-passport/issues"
+  },
+  "homepage": "https://github.com/Web-101/node-passport#readme",
+  "description": ""
 }
