--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
   "devDependencies": {
     "git-commit-msg-linter": "^3.2.8",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "name": "passport",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/app.js",
   "dependencies": {
     "ansi-styles": "^3.2.1",
+    "bcryptjs": "^2.4.3",
     "chalk": "^2.4.2",
     "color-convert": "^1.9.3",
     "color-name": "^1.1.3",
+    "connect-flash": "^0.1.1",
     "did-you-mean": "^0.0.1",
     "escape-string-regexp": "^1.0.5",
+    "express": "^4.17.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.2",
     "has-flag": "^4.0.0",
     "levenshtein": "^1.0.5",
+    "mongoose": "^6.1.4",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "supports-color": "^8.1.1",
     "underscore": "^1.13.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --watch './**/*.ts' --exec 'ts-node src/app.ts'"
   },
   "repository": {
     "type": "git",
