--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/express-ejs-layouts": "^2.5.0",
     "git-commit-msg-linter": "^3.2.8",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
@@ -9,6 +10,7 @@
   "version": "1.0.0",
   "main": "dist/app.js",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "ansi-styles": "^3.2.1",
     "bcryptjs": "^2.4.3",
     "chalk": "^2.4.2",
@@ -16,6 +18,8 @@
     "color-name": "^1.1.3",
     "connect-flash": "^0.1.1",
     "did-you-mean": "^0.0.1",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "escape-string-regexp": "^1.0.5",
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
@@ -29,7 +33,8 @@
     "underscore": "^1.13.2"
   },
   "scripts": {
-    "start": "nodemon --watch './**/*.ts' --exec 'ts-node src/app.ts'"
+    "start": "node dist/app.js",
+    "dev": "nodemon src/app.ts"
   },
   "repository": {
     "type": "git",
