--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/connect-flash": "^0.0.37",
     "@types/express-ejs-layouts": "^2.5.0",
+    "@types/express-session": "^1.17.4",
     "git-commit-msg-linter": "^3.2.8",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
